:wrench: ETL 관련 DTO들 별도 클래스로 분리
다른 프로젝트에서 참조하기 위함 잇히

--- a/ETLSimulator/ETLSimulator.csproj
+++ b/ETLSimulator/ETLSimulator.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.3.7.1207" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MessagingContracts\MessagingContracts.csproj" />
+  </ItemGroup>
+
 </Project>
